--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a href="index.html"><img class="logo" src="images/sj-logo.svg" alt="Logo"></a>
         <nav>
             <ul>
-                <li><a href="portfolio.html">My Work</a></li>
+                <li><a href="portfolio.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
